fix text alignment

--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -45,6 +45,7 @@
         grid-column: 1 / span 1;
         grid-row: 2 / span 1;
         justify-content: center;
+        align-items: flex-start;
     }
 
     .contactImg {
