--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -246,7 +246,7 @@ nav {
     grid-row: 2 / span 1;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr auto;
     padding: 0 var(--padding);
     row-gap: 3rem;
 }
